[package]
name = "fuzzrs"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = { version = "0.9.2", features = ["small_rng"], default-features = false }

[profile.dev]
opt-level = 0 # No optimizations for debug builds
debug = true # Include debug info for GDB or logging

[profile.release]
opt-level = 3 # Highest optimization for performance (release builds)
lto = true # Link-time optimization
debug = true
